[package]
name = "lit-coin"
version = "0.1.0"
authors = ["Fardeem Munir <munirfardeem@gmail.com>"]
edition = "2018"

[dependencies]
sha256 = "1.0.2"
chrono = "0.4"
secp256k1 = {version = "0.20.2", features = ["rand", "bitcoin_hashes"]}
rand = {version = "0.6", features = ["std"]}
libp2p = { version = "0.31", features = ["tcp-tokio", "mdns-tokio"] }
tokio = { version = "0.3", features = ["io-util", "io-std", "stream", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = {version = "=1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"